Change .gitignore to include xBridge*.wxl files

--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,6 @@ apps/*/*.20*
 
 #Allow
 !libraries/xpage/*
-!/apps/dexbridge2/dexbridge2.wxl
+!/apps/xBridge*/xBridge*.wxl
 !/apps/usb_serial/usb_serial.wxl
 
